src/css/SideGenerator.css
  
  
  /* Medium devices (tablets, 768px and up) */
  @media (min-width: 900px) {
    .side-gen {
        display: grid;
        grid-template-columns: 50% 50%;
    }
  }
  
  
  /* Extra large devices (large desktops, 1200px and up) */
  @media (min-width: 1200px) {
    .side-gen {
        display: grid;
        grid-template-columns:33% 33% 33%;
    }
  }

  @media (min-width: 1800px) {
    .side-gen {
        display: grid;
        grid-template-columns:25% 25% 25% 25%;
    }
  }
  

.hamburger-holder{
    display: none;
    justify-content: end;
    width: 100%;
}
.hamburger {
    width: 50px;
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    
}

.side-gen {
    width: 100%;
    overflow: scroll;
    padding-bottom: 8rem;
    margin-bottom: 2rem;
}

.gen-title {
    text-align: start;
    text-shadow: 1px 0 0 #676060, 0 -1px 0 #676060, 0 1px 0 #676060, -1px 0 0 #676060;
    margin-left: 1rem;
}

.gen-layout {
    overflow: scroll;
    width: 100%;
}

